fix supabase url

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_SUPABASE_URL=https://xxxx.supabase.co
-VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+VITE_SUPABASE_URL=https://agxvayryjbpdvqsdxeb.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_XYqrlmxzP5Rim4aKKXDlOA_p5NXfvEP
